force-app/main/default/objects/DWH_last_run_date__c/DWH_last_run_date__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the date on which DWH data was migrated to SF last.</description>
    <label>DWH_last_run_date</label>
</CustomObject>