force-app/main/default/objects/DWH_last_run_date__c/fields/Credit_Transaction_Sync_From__c.field-meta.xml
<CustomField>
    <fullName>Credit_Transaction_Sync_From__c</fullName>
    <label>Credit Transaction Sync From</label>
    <type>Date</type>
</CustomField>