force-app/main/default/objects/DWH_last_run_date__c/fields/Customer_NumRecords__c.field-meta.xml
<CustomField>
    <fullName>Customer_NumRecords__c</fullName>
    <inlineHelpText>Number of Record of Customer to sync per API call</inlineHelpText>
    <label>Customer NumRecords</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>