force-app/main/default/objects/DWH_last_run_date__c/fields/DWH_import_date__c.field-meta.xml
<CustomField>
    <fullName>DWH_import_date__c</fullName>
    <label>DWH_import_date</label>
    <type>Date</type>
</CustomField>