force-app/main/default/objects/DWH_last_run_date__c/fields/Post_Service_NumRecords__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_NumRecords__c</fullName>
    <label>Post Service NumRecords</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>