force-app/main/default/objects/DWH_last_run_date__c/fields/Post_Service_Sync_To__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_Sync_To__c</fullName>
    <label>Post Service Sync To</label>
    <type>Date</type>
</CustomField>