force-app/main/default/objects/DWH_last_run_date__c/fields/RegVehicle_NumRecords__c.field-meta.xml
<CustomField>
    <fullName>RegVehicle_NumRecords__c</fullName>
    <inlineHelpText>Number of Record of Register Vehicle to sync per API call</inlineHelpText>
    <label>RegVehicle NumRecords</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>