force-app/main/default/objects/DWH_last_run_date__c/fields/RegVehicle_StartPage__c.field-meta.xml
<CustomField>
    <fullName>RegVehicle_StartPage__c</fullName>
    <label>RegVehicle_StartPage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>