force-app/main/default/objects/DWH_last_run_date__c/fields/ServicePackage_TotalPage__c.field-meta.xml
<CustomField>
    <fullName>ServicePackage_TotalPage__c</fullName>
    <label>ServicePackage_TotalPages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>