force-app/main/default/objects/DWH_last_run_date__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <label>Time Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>