force-app/main/default/objects/DWH_last_run_date__c/fields/Vehicle_Credit_NumberOfPages__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Credit_NumberOfPages__c</fullName>
    <label>Vehicle Credit NumberOfPages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>