force-app/main/default/objects/DWH_last_run_date__c/fields/Vehicle_Credit_Sync_From__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Credit_Sync_From__c</fullName>
    <description>From Date to sync the Vehicle Credit from DWH</description>
    <inlineHelpText>From Date to sync the Vehicle Credit from DWH</inlineHelpText>
    <label>Vehicle Credit  Sync From</label>
    <type>Date</type>
</CustomField>