force-app/main/default/objects/DWH_last_run_date__c/fields/Vehicle_Credit_Sync_Success__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Credit_Sync_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicator of Vehicle Credit Batch Data Sync</inlineHelpText>
    <label>Vehicle Credit Sync Success ?</label>
    <type>Checkbox</type>
</CustomField>