force-app/main/default/objects/DWH_last_run_date__c/fields/Vehicle_Credit_Sync_To__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Credit_Sync_To__c</fullName>
    <description>To Date to sync the Vehicle Credit from DWH</description>
    <inlineHelpText>To Date to sync the Vehicle Credit from DWH</inlineHelpText>
    <label>Vehicle Credit  Sync To</label>
    <type>Date</type>
</CustomField>